# ticket-triage-system

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  classifier.py  generate_data.py  text_utils.py  train.py
tests/: test_classifier.py  test_server.py  test_text_utils.py
web/: server.py
web/static/: styles.css
web/templates/: index.html
